--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,24 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: ShanNatRichards 
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hi, I'm Shan. I'm an IT grad with experience in 
+  data warehousing, business intelligece, 
+  vizualizations, and machine learning.
+  
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://shannatrichards.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  ShanNatRichards
+
+#Options that come with minima but are not default
+author: Shan Richards
+linkedin_username: Shanique Richards
+
 
 # Build settings
-theme: minima
+#I Removed the minima theme as  I am forsaking the gem based theme for a regular theme
+#theme: minima
 plugins:
   - jekyll-feed
 
