Website back end changes'

--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,8 @@
 
 title: Shan Richards 
 description: >- # this means to ignore newlines until "baseurl:"
-  Hi, I'm Shan. I'm an IT grad with experience in 
-  data warehousing, business intelligence, 
-  Tableau, and machine learning.
+  Hi, I'm Shan. I'm an I.T. graduate with experience in 
+  data management, warehousing, BI, and Tableau.
   
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://shannatrichards.github.io" # the base hostname & protocol for your site, e.g. http://example.com
